<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/padding_32"
        android:fontFamily="sans-serif-medium"
        android:text="@string/registration"
        android:textSize="@dimen/text_20" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        style="@style/DefaultInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_24"
        android:layout_marginTop="32dp"
        android:hint="@string/edit_email_hint"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:errorTextColor="@android:color/holo_red_dark"
        app:hintTextColor="@color/gray_979BA8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:theme="@style/EditInputField" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        style="@style/DefaultInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_24"
        android:layout_marginTop="8dp"
        android:hint="@string/edit_name_hint"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:errorTextColor="@android:color/holo_red_dark"
        app:hintTextColor="@color/gray_979BA8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:singleLine="true"
            android:theme="@style/EditInputField" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneInputLayout"
        style="@style/DefaultInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_24"
        android:layout_marginTop="8dp"
        android:hint="@string/edit_phone_hint"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:errorTextColor="@android:color/holo_red_dark"
        app:hintTextColor="@color/gray_979BA8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:singleLine="true"
            android:theme="@style/EditInputField" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        style="@style/DefaultInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_24"
        android:layout_marginTop="8dp"
        android:hint="@string/edit_password_hint"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:errorTextColor="@android:color/holo_red_dark"
        app:hintTextColor="@color/gray_979BA8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true"
            android:theme="@style/EditInputField" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextRegisterButton"
        style="@style/RoundedButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_50"
        android:layout_marginHorizontal="@dimen/padding_22"
        android:text="@string/action_next" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_24"
        android:layout_marginTop="@dimen/padding_24"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:textSize="@dimen/text_16" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/authNavigateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/come_in_underline"
            android:textColor="@color/orange_CD5334"
            android:textSize="@dimen/text_16" />

    </LinearLayout>

    <com.thugrzz.mypetapp.view.IndicatorsView
        style="@style/DefaultIndicators"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/padding_32"
        android:layout_marginBottom="@dimen/padding_64"
        app:indicatorsTotalCount="2" />
</LinearLayout>