<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/button_cancel"
            android:textColor="@color/gray_979BA8"
            android:textSize="18sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addNoteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_plus" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/add_schedule_note_title"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleInputLayout"
                style="@style/DefaultInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="4dp"
                app:errorEnabled="false"
                app:errorTextColor="@android:color/holo_red_dark"
                app:hintEnabled="false"
                app:hintTextColor="@color/gray_979BA8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleInputText"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:hint="@string/add_schedule_note_title_hint"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:theme="@style/EditInputField" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/add_schedule_note_description"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionInputLayout"
                style="@style/DefaultInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="4dp"
                app:errorEnabled="false"
                app:errorTextColor="@android:color/holo_red_dark"
                app:hintEnabled="false"
                app:hintTextColor="@color/gray_979BA8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionInputText"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:hint="@string/add_schedule_note_description_hint"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:theme="@style/EditInputField" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/add_schedule_note_date"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dateView"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_input_field_picker"
                android:gravity="center_vertical"
                android:hint="@string/add_schedule_note_date_hint"
                android:paddingStart="18dp"
                android:paddingEnd="12dp"
                android:textSize="18sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/add_schedule_note_time"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/timeView"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_input_field_picker"
                android:gravity="center_vertical"
                android:hint="@string/add_schedule_note_time_hint"
                android:paddingStart="18dp"
                android:paddingEnd="12dp"
                android:textSize="18sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/add_schedule_note_type"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/noteTypeView"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_input_field_picker"
                android:entries="@array/schedule_types"
                android:paddingStart="10dp"
                android:paddingEnd="12dp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/add_schedule_note_periodicity"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/notePeriodicityView"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_input_field_picker"
                android:entries="@array/note_periodicity"
                android:paddingStart="10dp"
                android:layout_marginBottom="32dp"
                android:paddingEnd="12dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>